[project]
name = "argexplain"
dynamic = ["version"]
description = 'A simple script that explains the arguments and stdin lines it receives'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Thomas Chamberlin", email = "tchamberlin@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich",
]

[project.urls]
repository = "https://github.com/tchamberlin/argexplain.git"

[project.scripts]
argexplain = "argexplain.argexplain:main"

[tool.hatch.version]
path = "src/argexplain/__about__.py"

[tool.black]
target-version = ["py311"]
line-length = 100
skip-string-normalization = false

[tool.ruff]
target-version = "py311"
line-length = 100
ignore = [
  "FBT002",
  "T201",
]
unfixable = []

[tool.ruff.isort]
known-first-party = ["argexplain"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
